# cgitpr

./: .ccls  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt  gitpr.cpp  install.sh
cmake/: Findanyoption.cmake  Findclipp.cmake  Findfmt.cmake  Findloguru.cmake  Findplog.cmake  Findtclap.cmake  build_safeguards.cmake  compiler_check.cmake  config_h.cmake  configure.cmake  iwyu.cmake
src/: Main.cc  Options.cc  Options.h  Options.hpp  Repo.cc  Repo.h  Repo.hpp  RepoArea.cc  RepoArea.h  RepoArea.hpp  Utils.cc  Utils.h  Utils.hpp  common.cc  common.h  main.cc  repo.cc  repo.h
